# solar-production-prediction

./: .gitignore  Makefile  README.md  enphase_tokens.secret  pyproject.toml  requirements.dev.text  requirements.dev.txt  requirements.txt
.github/actions/refresh_enphase_tokens/: Dockerfile  action.yml  refresh_tokens.py
.github/workflows/: make-predictions.yml  test-local-action.yml
src/: env.py  predict.py
src/external_data/: __init__.py  enphase.py  http_client.py  noaa.py
src/model/: __init__.py  model_base.py
src/model/data/: __init__.py  create_training_set.py  download_historical_aqi.py  load.py  plot_training_data.py  preprocessed_training_data.csv  solar_production-20171213_to_20221226.csv
src/model/v2022_12_30/: README.md  __init__.py  __main__.py  model.pickle  train.py
src/persistence/: __init__.py  predictions.duckdb
src/persistence/ddl/: __init__.py  run.py
src/solar_production/: __main__.py  env.py  predict.py
src/solar_production/training/: load.py
src/solar_production/training/data/: __init__.py  create_training_set.py  preprocessed_training_data.csv
src/solar_production/weather_api/: __init__.py  http_client.py  noaa.py
src/solar_production_prediction/: __main__.py  env.py  predict.py
src/solar_production_prediction/model/: __init__.py  model_base.py
src/solar_production_prediction/prediction/: __init__.py  predictions.duckdb
src/solar_production_prediction/training/: __init__.py  load.py  train.py
src/solar_production_prediction/weather_api/: __init__.py  air_now.py  enphase.py  http_client.py  noaa.py
(+12 files in other folders)
