[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-production-model"
version = "0.1.0"
dependencies = ["lxml", "python-dotenv", "scikit-learn", "tenacity"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy"]

[tool.isort]
force_sort_within_sections = true
line_length = 50
multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
profile = "black"
